# lib/api-spec/openapi.yaml
@@ -793,6 +793,8 @@ components:
           type: number
         amount_in_words:
           type: string
+        include_gst:
+          type: boolean
         payment_mode:
           type: string
         status:
@@ -884,6 +886,8 @@ components:
           type: number
         amount_in_words:
           type: string
+        include_gst:
+          type: boolean
         payment_mode:
           type: string
         status:
